@@ -1,14 +1,22 @@
-// AppConfig.cpp: implementation of the CAppConfig class.
-/////////////////////////////////////////////////////////////////////////////
-// Name:        appconfig.cpp
-// Purpose:     Application configuration class, deal with configuration
-// Author:      PCMan (HZY)   http://pcman.ptt.cc/
-// E-mail:      pcman.tw@gmail.com
-// Created:     2004.7.20
-// Copyright:   (C) 2004 PCMan
-// Licence:     GPL : http://www.gnu.org/licenses/gpl.html
-// Modified by: 
-/////////////////////////////////////////////////////////////////////////////
+/**
+ * appconfig.cpp: implementation of the CAppConfig class.
+ *
+ * Copyright (c) 2004 PCMan <pcman.tw@gmail.com>
+ *
+ * This program is free software; you can redistribute it and/or modify
+ * it under the terms of the GNU General Public License as published by
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software Foundation,
+ * Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
+ */
 
 #ifdef __GNUG__
   #pragma implementation "appconfig.h"
@@ -334,7 +342,7 @@ void CAppConfig::SetToDefault()
 	HorizontalCenterAlign = false;
 	VerticalCenterAlign = false;
 
-	MailClient = WebBrowser = "mozilla %s";
+	MailClient = WebBrowser = "firefox %s";
 	ShowTrayIcon = true;
 	ShowStatusBar = true;
 
